# docs/swagger.json
@@ -160,6 +160,46 @@
                 }
             }
         },
+        "/rag/qna": {
+            "post": {
+                "description": "The answer generated by AI Rag",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RAG"
+                ],
+                "summary": "Ask question for answer",
+                "parameters": [
+                    {
+                        "description": "Question Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.generateAnswerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.generateAnswerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/rental/estate/{id}": {
             "get": {
                 "produces": [
@@ -494,6 +534,26 @@
                 }
             }
         },
+        "handler.generateAnswerRequest": {
+            "type": "object",
+            "required": [
+                "question"
+            ],
+            "properties": {
+                "question": {
+                    "type": "string",
+                    "default": "สรุปเอกสารย่อๆ"
+                }
+            }
+        },
+        "handler.generateAnswerResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.loginRequest": {
             "type": "object",
             "required": [
@@ -699,11 +759,6 @@
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
-        },
-        "CookieAuth": {
-            "type": "apiKey",
-            "name": "refresh_token",
-            "in": "cookie"
         }
     }
 }
