# internal/delivery/http/handler/rag_dto.go
@@ -1,0 +1,9 @@
+package handler
+
+type generateAnswerResponse struct {
+	Message string `json:"message"`
+}
+
+type generateAnswerRequest struct {
+	Question string `json:"question" binding:"required" default:"สรุปเอกสารย่อๆ"`
+}
