# internal/delivery/http/handler/rag_handler.go
@@ -1,0 +1,62 @@
+package handler
+
+import (
+	"net/http"
+
+	"github.com/ballinwza/scraper-dashboard-be/config"
+	usecase_rag "github.com/ballinwza/scraper-dashboard-be/internal/usecase/rag"
+	"github.com/ballinwza/scraper-dashboard-be/pkg/validator"
+	"github.com/gin-gonic/gin"
+)
+
+type RagHandler struct {
+	usecase usecase_rag.IRagUsecase
+	cfg     config.Config
+}
+
+func NewRagHandler(usecase usecase_rag.IRagUsecase, cfg config.Config) *RagHandler {
+	return &RagHandler{
+		usecase: usecase,
+		cfg:     cfg,
+	}
+}
+
+// GenerateAnswer
+// @Summary Ask question for answer
+// @Description The answer generated by AI Rag
+// @Tags RAG
+// @Accept json
+// @Produce json
+// @Param request body generateAnswerRequest true "Question Request"
+// @Success 200 {object} generateAnswerResponse
+// @Failure 400 {object} errorResponse
+// @Router /rag/qna [post]
+func (h *RagHandler) AskQuestion(c *gin.Context) {
+	var req generateAnswerRequest
+	validator := validator.New()
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	if errs := validator.ValidateStruct(&req); len(errs) > 0 {
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"errors": errs})
+		return
+	}
+
+	answer, err := h.usecase.GenerateAnswer(
+		c.Request.Context(),
+		req.Question,
+	)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	res := generateAnswerResponse{
+		Message: answer,
+	}
+
+	c.JSON(http.StatusOK, res)
+}
